--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -71,9 +71,7 @@ jobs:
     #   If the Autobuild fails above, remove it and uncomment the following three lines.
     #   modify them (or add more) to build your code if your project, please refer to the EXAMPLE below for guidance.
     - name: Build Java 
-    - run: |
-         echo "Run, Build Application using script"
-        ./mvn package
+    - run: ./build.sh
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
